--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Listar arquivos no diretório atual
-        run: ls -R
-
-      - name: Listar arquivos no diretório Terraform
-        run: ls -R terraform/
+      - name: Verificar estrutura de arquivos
+        run: |
+          echo "Diretório atual:"
+          pwd
+          echo "Arquivos e diretórios:"
+          ls -R
 
       - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v2
@@ -39,6 +40,3 @@ jobs:
 
       - name: Aplicar Terraform
         run: terraform apply -auto-approve -chdir=terraform/
-
-      # - name: Destruir Terraform
-      #   run: terraform destroy -auto-approve -chdir=terraform/
