--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,10 @@ jobs:
         run: |
           echo "Diretório atual:"
           pwd
-          echo "Arquivos e diretórios:"
+          echo "Arquivos e diretórios no projeto:"
           ls -R
+          echo "Arquivos no diretório terraform/:"
+          ls -la terraform/
 
       - name: Instalar Terraform
         uses: hashicorp/setup-terraform@v2
@@ -33,7 +35,9 @@ jobs:
           terraform_version: 1.5.0
 
       - name: Inicializar Terraform
-        run: terraform init -chdir=terraform/
+        run: terraform init -chdir=terraform/ -input=false
+        env:
+          TF_LOG: DEBUG
 
       - name: Validar Terraform
         run: terraform validate -chdir=terraform/
