--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,12 +33,12 @@ jobs:
           terraform_version: 1.5.0
 
       - name: Inicializar Terraform
-        run: terraform init
+        run: terraform init -chdir=terraform/
         env:
           TF_LOG: DEBUG
 
       - name: Validar Terraform
-        run: terraform validate
+        run: terraform validate -chdir=terraform/
 
       - name: Aplicar Terraform
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -chdir=terraform/
