--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,12 +31,18 @@ jobs:
 
       # Step 04 - Inicializar Terraform
       - name: Step 04 - Terraform Init
-        run: terraform -chdir=./terraform/ init -input=false
+        run: terraform init -chdir=terraform/ -input=false -reconfigure -upgrade
+        env:
+          TF_LOG: DEBUG
 
       # Step 05 - Validar Terraform
       - name: Step 05 - Terraform Validate
-        run: terraform -chdir=./terraform/ validate
+        run: terraform validate -chdir=terraform/
 
       # Step 06 - Planejar Terraform
       - name: Step 06 - Terraform Plan
-        run: terraform -chdir=./terraform/ plan -input
+        run: terraform plan -chdir=terraform/ -input=false -out=tfplan
+
+      # Step 07 - Aplicar Terraform
+      - name: Step 07 - Terraform Apply
+        run: terraform apply -chdir=terraform/ -auto-approve tfplan
