--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           terraform_version: 1.5.0
 
       # Step 04 - Debug Terraform Directory
-      - name: Debug Terraform Directory
+      - name: Step 04 - Debug Terraform Directory
         run: |
           pwd
           ls -la
@@ -54,10 +54,26 @@ jobs:
       - name: Step 08 - Terraform Plan
         run: terraform -chdir=./terraform/ plan -input=false
 
-      # # Step 09 - Aplicar Terraform
-      # - name: Step 09 - Terraform Apply
-      #   run: terraform -chdir=./terraform/ apply -auto-approve -input=false
+      # Step 09 - Aplicar Terraform
+      - name: Step 09 - Terraform Apply
+        run: terraform -chdir=./terraform/ apply -auto-approve -input=false
 
-      # Step 10 - Destruir Terraform
-      - name: Step 10 - Terraform Destroy
-        run: terraform -chdir=./terraform/ destroy -auto-approve -input=false
+      # Step 10 - Atualizar Estado Terraform (Evita erro "No objects need to be destroyed")
+      - name: Step 10 - Terraform Refresh
+        run: terraform -chdir=./terraform/ refresh
+
+      # Step 11 - Verificar Recursos Antes do Destroy
+      - name: Step 11 - List Terraform Resources
+        run: terraform -chdir=./terraform/ state list
+
+      # Step 12 - Planejar Destruição
+      - name: Step 12 - Terraform Plan (Destroy)
+        run: terraform -chdir=./terraform/ plan -destroy -input=false
+
+      # Step 13 - Destruir Terraform (Comentado por padrão)
+      # - name: Step 13 - Terraform Destroy
+      #   run: terraform -chdir=./terraform/ destroy -auto-approve -input=false
+
+      # Step 14 - Remover Estado Local Apenas Após a Destruição (Comentado por padrão)
+      # - name: Step 14 - Clean Terraform State
+      #   run: rm -rf terraform/.terraform terraform/.terraform.lock.hcl terraform/terraform.tfstate
