--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,8 +55,8 @@ jobs:
         run: terraform -chdir=./terraform/ plan -input=false
 
       # Step 09 - Aplicar Terraform
-      # - name: Step 09 - Terraform Apply
-      #   run: terraform -chdir=./terraform/ apply -auto-approve -input=false
+      - name: Step 09 - Terraform Apply
+        run: terraform -chdir=./terraform/ apply -auto-approve -input=false
 
       # Step 10 - Atualizar Estado Terraform (Evita erro "No objects need to be destroyed")
       - name: Step 10 - Terraform Refresh
