--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,8 @@ on:
       - feature/test
 
 jobs:
-  tf-run:
-    name: Terraform run on AWS
+  tf-destroy:
+    name: Terraform Destroy on AWS
     runs-on: ubuntu-latest
 
     steps:
@@ -46,34 +46,18 @@ jobs:
         env:
           TF_LOG: DEBUG
 
-      # Step 07 - Validar Terraform
-      - name: Step 07 - Terraform Validate
-        run: terraform -chdir=./terraform/ validate
-
-      # Step 08 - Planejar Terraform
-      - name: Step 08 - Terraform Plan
-        run: terraform -chdir=./terraform/ plan -input=false
-
-      # Step 09 - Aplicar Terraform
-      - name: Step 09 - Terraform Apply
-        run: terraform -chdir=./terraform/ apply -auto-approve -input=false
-
-      # Step 10 - Atualizar Estado Terraform (Evita erro "No objects need to be destroyed")
-      - name: Step 10 - Terraform Refresh
-        run: terraform -chdir=./terraform/ refresh
-
-      # Step 11 - Verificar Recursos Antes do Destroy
-      - name: Step 11 - List Terraform Resources
+      # Step 07 - Verificar Recursos Antes do Destroy
+      - name: Step 07 - List Terraform Resources
         run: terraform -chdir=./terraform/ state list
 
-      # Step 12 - Planejar Destruição
-      # - name: Step 12 - Terraform Plan (Destroy)
-      #   run: terraform -chdir=./terraform/ plan -destroy -input=false
+      # Step 08 - Planejar Destruição
+      - name: Step 08 - Terraform Plan (Destroy)
+        run: terraform -chdir=./terraform/ plan -destroy -input=false
 
-      # # Step 13 - Destruir Terraform (Comentado por padrão)
-      # - name: Step 13 - Terraform Destroy
-      #   run: terraform -chdir=./terraform/ destroy -auto-approve -input=false
+      # Step 09 - Destruir Terraform
+      - name: Step 09 - Terraform Destroy
+        run: terraform -chdir=./terraform/ destroy -auto-approve -input=false
 
-      # Step 14 - Remover Estado Local Apenas Após a Destruição (Comentado por padrão)
-      # - name: Step 14 - Clean Terraform State
-      #   run: rm -rf terraform/.terraform terraform/.terraform.lock.hcl terraform/terraform.tfstate
+      # Step 10 - Remover Estado Local Após a Destruição
+      - name: Step 10 - Clean Terraform State
+        run: rm -rf terraform/.terraform terraform/.terraform.lock.hcl terraform/terraform.tfstate
